--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drawing board</title>
+    <title>Geralds Drawing board</title>
     <link rel="stylesheet" href="draw.css">
 </head>
 <body>
     <div id="container">
         
-        <canvas></canvas>
+        <canvas>
+        </canvas>
 
         <div class="options">
             <button  id="draw">draw</button>
             <button  id="erase">erase</button>
 
 
-            <input type="range" min="2" max="20" value="2">
-            <span id="screen">2</span>
+            <input type="range" min="5" max="50" value="5">
+            <span id="screen">5</span>
         </div>
 
     </div>
